# MO-book

./: pyproject.toml
notebooks/01/: 01-production-planning.ipynb  02-production-planning-basic.ipynb  03-production-planning-advanced.ipynb
