[project]
name = "mo-book"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cvxpy>=1.8.2",
    "gurobipy>=13.0.1",
    "highspy>=1.13.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "polars>=1.39.3",
    "pyomo>=6.10.0",
]

[tool.ruff]
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
select = [
    "E", "F", "I", "NPY", "Q", "RET", "RUF", "SIM",
]

[tool.ruff.isort]
case-sensitive = true
